# mcbclib2

./: CMakeLists.txt  buf.txt  clientDef.h  main.c  packetDefinitions.c  packetDefinitions.h  packetDefs-1_12_2.c  packetDefs-1_12_2.h
libs/: oldcodetoreuse.txt  sharedmain.c  sharedmain.h  simpleSocket.c  simpleSocket.h
libs/debug/: file_io.c  file_io.h  localErrno.c  localErrno.h
libs/zlib/: CMakeLists.txt
